[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MushRoom.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Interface/SidePanel_MushRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/Items/Jumpshroom (1).png" type="Texture" id=3]
[ext_resource path="res://Textures/Background/Mush-Room-Scene.png" type="Texture" id=4]
[ext_resource path="res://Textures/Misc/SpeechBubbles/connector_02.png" type="Texture" id=5]
[ext_resource path="res://Textures/Background/CaveInterior.jpg" type="Texture" id=6]
[ext_resource path="res://Fonts/IMMORTAL.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Textures/Misc/SpeechBubbles/panel_04.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpeechBubble:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 228.273, -442.867 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpeechBubble:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 282, 164 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpeechBubble:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpeechBubble:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpeechBubble/SpeechPointer:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24.0188, 130.165 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpeechBubble/SpeechPointer:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 26, 21 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpeechBubble/SpeechPointer:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpeechBubble/ColorRect:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.68356, 136.906 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpeechBubble/ColorRect:rect_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 12 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpeechBubble/SpeechText:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 7 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpeechBubble/SpeechText:rect_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 262, 142 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SpeechBubble/SpeechText:text")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Wierd, why is there a hospital in the middle of a remote forest? Well, whatever the reason I bet I could go inside." ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("SpeechBubble/SpeechText:visible_characters")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("ContinueLabel:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SpeechBubble/SpeechPointer:flip_h")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Scene_MushRoom_01"
length = 8.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpeechBubble:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 431, 198 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpeechBubble:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 331, 180 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpeechBubble:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpeechBubble:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpeechBubble/SpeechPointer:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 328, 144 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpeechBubble/SpeechPointer:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 26, 21 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpeechBubble/SpeechPointer:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpeechBubble/ColorRect:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 327, 150 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpeechBubble/ColorRect:rect_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 12 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpeechBubble/SpeechText:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 6 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpeechBubble/SpeechText:rect_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 314, 159 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SpeechBubble/SpeechText:text")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Welcome to the Mush Room. We have 2 Jumpshrooms for sale. Use them carefully though. Once placed they stay in that spot forever." ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("SpeechBubble/SpeechText:visible_characters")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5, 3.55, 3.6, 3.65, 3.7, 3.75, 3.8, 3.85, 3.9, 3.95, 4, 4.05, 4.1, 4.15, 4.2, 4.25, 4.3, 4.35, 4.4, 4.45, 4.5, 4.55, 4.6, 4.65, 4.7, 4.75, 4.8, 4.85, 4.9, 4.95, 5, 5.05, 5.1, 5.15, 5.2, 5.25, 5.3, 5.35, 5.4, 5.45, 5.5, 5.55, 5.6, 5.65, 5.7, 5.75, 5.8, 5.85, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("ContinueLabel:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 5.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SpeechBubble/SpeechPointer:flip_h")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=6]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.980392, 0.960784, 0.964706, 1 )

[node name="MushRoom" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -68.0
margin_top = -135.0
margin_right = 1278.0
margin_bottom = 720.0
texture = ExtResource( 6 )
expand = true

[node name="MushRoomImg" type="TextureRect" parent="."]
margin_left = 581.0
margin_top = 127.0
margin_right = 1254.0
margin_bottom = 561.0
texture = ExtResource( 4 )
expand = true

[node name="Jumpshroom" type="Sprite" parent="MushRoomImg"]
position = Vector2( -311.75, 362.75 )
scale = Vector2( 1.20703, 1.12109 )
texture = ExtResource( 3 )

[node name="SidePanel" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 23.0
margin_top = 22.0
margin_right = 723.0
margin_bottom = 622.0

[node name="SpeechBubble" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 228.273
margin_top = -442.867
margin_right = -769.727
margin_bottom = -998.867
texture = ExtResource( 8 )
expand = true

[node name="SpeechPointer" type="TextureRect" parent="SpeechBubble"]
margin_left = -24.0188
margin_top = 130.165
margin_right = 1.9812
margin_bottom = 151.165
texture = ExtResource( 5 )
expand = true

[node name="ColorRect" type="ColorRect" parent="SpeechBubble"]
margin_left = 1.68356
margin_top = 136.906
margin_right = 4.68356
margin_bottom = 148.906
color = Color( 0.921569, 0.960784, 0.964706, 1 )

[node name="SpeechText" type="Label" parent="SpeechBubble"]
margin_left = 6.0
margin_top = 7.0
margin_right = 268.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Wierd, why is there a hospital in the middle of a remote forest? Well, whatever the reason I bet I could go inside."
autowrap = true
percent_visible = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Scene_MushRoom_01 = SubResource( 5 )

[node name="ContinueLabel" type="Label" parent="."]
visible = false
margin_left = 1039.39
margin_top = 665.829
margin_right = 1257.39
margin_bottom = 700.829
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = " CONTINUE... "
__meta__ = {
"_edit_use_anchors_": false
}
